# jconverter

./: .clang-format  CMakeLists.txt  convertfromstrings.cpp  convertfromstrings.hpp  jconverter-gui.cpp  jconverter-shell.cpp  jconverter.cpp  logic.cpp  logic.hpp
